src/main/java/com/example/DiplomaSite/error/DefenseResultCreationException.java
package com.example.DiplomaSite.error;

public class DefenseResultCreationException extends RuntimeException{
    public DefenseResultCreationException(String message, Throwable cause) {
        super(message, cause);
    }
}
